# mathpaper-ai

./: .gitignore  LICENSE  MathPaper_AI_Colab.ipynb  README.md  RESULTS.md  SETUP.md  app.py  evaluate.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
demo/: demo.jsx
results/: results.json
screenshots/: README.md
src/mathpaper/: Evaluation.py  __init__.py  agents.py  ingest.py  llm.py  retrieval.py  tools.py
tests/: test_agents.py  test_evaluation.py  test_ingest.py  test_tools.py
