[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mathpaper-ai"
version = "0.1.0"
description = "An agentic RAG system that explains mathematical concepts, derivations, and proofs from research papers."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Souradeep Das" }]
keywords = ["rag", "agents", "llm", "retrieval", "nlp"]
dependencies = [
    "rank_bm25>=0.2.2",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
# pip install -e ".[app]" for the web demo + PDF upload
dev = ["pytest>=7.0", "pymupdf>=1.24"]
app = ["gradio>=4.0", "pymupdf>=1.24"]

[project.urls]
Homepage = "https://github.com/sourds42/mathpaper-ai"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
